code/wandb/run-20231115_130032-xdxsyu8t/files/output.log

<wandb.sdk.wandb_run.Run object at 0x1528dc6abc18>
  File "<stdin>", line 1
    wandb.log({"train_loss": 1})
    ^
IndentationError: unexpected indent